--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
+body {
+  background-color: #f1f1f1;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
 .App {
+  background-color: white;
+  width: 100%;
+  max-width: 400px;
+  margin: 2rem auto;
+  padding: 1rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  margin-top: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label {
+  display: block;
+  margin: 1rem 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input,
+select {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
+button {
+  display: inline-block;
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  background-color: #d32f2f;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+  background-color: #c62828;
+}
+
+.salary-buttons {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-bottom: 1rem;
+}
+
+.salary-buttons label {
+  width: 100%;
+  margin-bottom: 0.5rem;
+}
+
+.salary-buttons button {
+  background-color: #000000;
+  border: 1px solid #ddd;
+  padding: 0.5rem 1rem;
+  margin: 0.25rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.salary-buttons button.selected {
+  background-color: #d32f2f;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.salary-buttons button:hover {
+  background-color: #ddd;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.salary-buttons button.selected:hover {
+  background-color: #c62828;
+}
+
+.meeting-cost {
+  margin-top: 2rem;
+}
+
+.cost {
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 480px) {
+  .App {
+    padding: 1rem;
   }
 }
