--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ select {
   width: 100%;
   padding: 0.5rem;
   font-size: 1rem;
+  box-sizing: border-box;
 }
 
 button {
@@ -61,12 +62,13 @@ button:hover {
 }
 
 .salary-buttons button {
-  background-color: #000000;
+  background-color: #f1f1f1;
   border: 1px solid #ddd;
   padding: 0.5rem 1rem;
   margin: 0.25rem;
   font-size: 1rem;
   cursor: pointer;
+  color: black;
 }
 
 .salary-buttons button.selected {
@@ -93,5 +95,11 @@ button:hover {
 @media screen and (max-width: 480px) {
   .App {
     padding: 1rem;
+  }
+
+  .salary-buttons button {
+    font-size: 0.8rem;
+    padding: 0.4rem 0.8rem;
+    margin: 0.2rem;
   }
 }
